unpackaged/main/default/objects/FSL__Polygon__c/fields/FSL__Description__c.field-meta.xml
<CustomField>
    <fullName>FSL__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>