unpackaged/main/default/objects/FSL__Polygon__c/fields/FSL__KML__c.field-meta.xml
<CustomField>
    <fullName>FSL__KML__c</fullName>
    <label>KML Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>