unpackaged/main/default/objects/FSL__Polygon__c/fields/FSL__Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>FSL__Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Polygons</relationshipLabel>
    <relationshipName>Polygons</relationshipName>
    <type>Lookup</type>
</CustomField>